<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgr"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:flow_verticalAlign="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_directions_car_24"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageLogo"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/parentRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/Header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_white_shape"
            android:padding="10dp"
            android:elevation="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chon_diem_di"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:background="@drawable/border_white_shape"
                    android:hint="@string/diem_di"
                    android:labelFor="@+id/placeStart"
                    app:startIconDrawable="@drawable/ic_baseline_location_on_24">
                    <AutoCompleteTextView
                        android:id="@+id/placeStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chon_diem_den"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:background="@drawable/border_white_shape"
                    android:hint="@string/diem_den"
                    android:labelFor="@+id/placeEnd"
                    app:startIconDrawable="@drawable/ic_baseline_location_on_24">
                    <AutoCompleteTextView
                        android:id="@+id/placeEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

<!--            <ImageButton-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:background="@drawable/border_green_shape"-->
<!--                android:src="@drawable/transaction" />-->
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/deltaRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/place"
            android:background="@drawable/border_white_shape"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPlaceStart"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:background="@drawable/border_white_shape"
                android:layout_marginTop="10dp"
                android:hint="@string/date"
                app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
                android:layout_centerVertical="true"
                android:layout_alignParentTop="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:onClick="showDatePickerDialog"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPlaceEnd"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:background="@drawable/border_white_shape"
                android:layout_marginTop="10dp"
                android:hint="@string/ve"
                app:startIconDrawable="@drawable/ic_baseline_supervisor_account_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">
                <AutoCompleteTextView
                    android:id="@+id/countPreson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"/>
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
            <Button
                android:id="@+id/filterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/deltaRelative"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_green_shape"
                android:text="@string/search"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>